# tcm_py

./: README.md
tcm_py/: README.md  pyproject.toml  test.py
tcm_py/src/tcm_py/: __init__.py  api.py  dcm.py
tcm_py/src/tcm_py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tcm_py/src/tcm_py/inference/: vl_gc.py
tcm_py/src/tcm_py/laplace/: smooth.py  transfer.py
tcm_py/src/tcm_py/model/: params.py  tc_hilge2.py
tcm_py/src/tcm_py/utils/: finite_diff.py  linalg.py
