[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tcm-py"
version = "0.0.1"
description = "Thalamo-cortical model spectra fitting (Laplace transfer + Variational Laplace GC)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "scipy>=1.10"]

[tool.setuptools]
package-dir = {"" = "src"}
